Fixed scrollbar bugs and make craftingPanel dymanic

--- a/frontend/src/components/CraftingPanel/craftingPanel.css
+++ b/frontend/src/components/CraftingPanel/craftingPanel.css
@@ -1,12 +1,15 @@
 .settings-bar {
   width: 100%;
   max-width: 350px;
-  min-height: 550px;
+  height: 620px;
   background: var(--background);
   color: var(--primary-text);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border: 2px solid rgb(190, 190, 190);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; 
 }
 .settings-bar-header {
   padding: 20px 20px 0px 20px;
@@ -46,9 +49,11 @@
 }
 
 .tab-content {
+  flex: 1; /* Allow it to take available space */
   display: flex;
-  align-items: center;
+  flex-direction: column;
   margin-top: 7px;
+  overflow: hidden; /* Prevent unwanted scrollbars */
 }
 
 .settings-options {
